--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,11 @@ add_executable(tsmap ${SOURCE_FILES} ${HEADER_FILES})
 
 #build dependencies
 target_link_libraries(tsmap tstoolmap)
+
+#---------------------------------------------------------------- tscut
+#source files
+set(SOURCE_FILES
+    tscut.cpp
+)
+
+add_executable(tscut ${SOURCE_FILES})
