Tests are not working on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ project(tstools CXX)
 cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(src)
-add_subdirectory(test)
-
+if (NOT WIN32)
+    add_subdirectory(test)
+endif()
