--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,4 @@ set(SOURCE_FILES
 include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_BINARY_DIR})
 add_executable(tstool_tests ${SOURCE_FILES})
 target_link_libraries(tstool_tests ${GTEST_LIBS_DIR}/libgtest.a ${GTEST_LIBS_DIR}/libgtest_main.a tstoolcheck)
+add_dependencies(tstool_tests googletest)
