--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ cmake_minimum_required(VERSION 2.8)
 #exe path
 if (NOT WIN32)
     set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/linux)
+    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/linux)
 else()
     set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/windows)
+    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/windows)
 endif()
 
 add_subdirectory(src)
