--- a/test/ext/CMakeLists.txt
+++ b/test/ext/CMakeLists.txt
@@ -4,6 +4,7 @@ include(ExternalProject)
 
 ExternalProject_Add(googletest
     GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG release-1.8.0
     CMAKE_ARGS
     -DCMAKE_CXX_FLAGS=${MSVC_COMPILER_DEFS}
     -Dgtest_disable_pthreads=ON
