--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2.0.0
     - name: Build tstools
-      uses: lukka/run-cmake@v0
-      with:
-        cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-        cmakeListsTxtPath: 'CMakeLists.txt'
-        useVcpkgToolchainFile: true
-        buildDirectory: '.'
-        cmakeAppendedArgs: 'build --target all'    
+      run: cmake --build . --target all
     - name: Install Qt
       uses: jurplel/install-qt-action@v2.2.1
       timeout-minutes: 10
