--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
       run: |
         cmake .
         cmake --build . --target all
+    - name: Google test
+      run: |
+        ./bin/linux/tstools_test
     - name: Install Qt
       uses: jurplel/install-qt-action@v2.2.1
       timeout-minutes: 10
